--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "socket.io": "^4.6.1",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
